# java-analyzer

./: .pre-commit-config.yaml  Cargo.toml  README.md  profile.txt
docs/: architecture.md  development-guide.md  jls-implementation-status.md  project-overview.md  salsa-quick-reference.md
editors/code/: package.json
editors/code/src/: client.ts  commands.ts  config.ts  decompilerPath.ts  extension.ts  serverPath.ts
src/: index.rs  language.rs  lib.rs  salsa_db.rs  salsa_queries.rs  workspace.rs
src/build_integration/: reload.rs
src/completion/: candidate.rs  context.rs  engine.rs  import_completion.rs  import_utils.rs  parser.rs  provider.rs  type_resolver.rs
src/completion/providers/: static_member.rs
src/completion/type_resolver/: symbol_resolver.rs
src/decompiler/backend/: cfr.rs  vineflower.rs
src/index/: archive_stub.rs  artifact_reader.rs  bucket.rs  cache.rs  codebase.rs  handle.rs  incremental.rs  jdk.rs  module_index.rs  scope.rs  scope_snapshot.rs  source.rs  store.rs  view.rs  workspace_index.rs
src/index/store/: artifact.rs  ids.rs  lmdb.rs
src/language/: java.rs  kotlin.rs  rope_utils.rs
src/language/java/: class_parser.rs  completion_context.rs  editor_semantics.rs  expression_typing.rs  flow.rs  injection.rs  inlay_hints.rs  locals.rs  location.rs  members.rs  module_info.rs  render.rs  scope.rs  symbols.rs  type_ctx.rs  utils.rs
src/language/snapshots/: java_analyzer__language__java__tests__array_receiver_completion_provenance.snap  java_analyzer__language__java__tests__location_precedence_member_vs_type_positions.snap  java_analyzer__language__java__tests__plain_array_parameter_and_var_materialization.snap  java_analyzer__language__java__tests__varargs_join_callsite_context_members_and_candidates.snap  java_analyzer__language__java__tests__varargs_parameter_metadata_and_body_locals.snap
src/lsp/: capabilities.rs  converters.rs  request_context.rs  server.rs
src/lsp/handlers/: completion.rs  goto_definition.rs  semantic_tokens.rs  symbols.rs
src/salsa_queries/: completion.rs  context.rs  conversion.rs  hints.rs  index.rs  java.rs  kotlin.rs  parse.rs  resolve.rs  semantic.rs  symbols.rs
src/semantic/: context.rs  types.rs
src/workspace/: document.rs
tests/: incremental_parser.rs  lsp_integration.rs  stack_overflow_regression.rs
(+52 files in other folders)
