[package]
name = "java-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
dashmap = "6"
rustc-hash = "2"
once_cell = "1"
smallvec = "2.0.0-alpha.12"
parking_lot = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rayon = "1.11.0"
rust-asm = "0.1.5"
zip = "8.1.0"
tower-lsp = "0.20.0"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
dirs = "6.0.0"
nucleo = "0.5.0"
nucleo-matcher = "0.3.1"
indoc = "2.0.7"
salsa = "0.26.0"
tree-sitter = "0.26.5"
tree-sitter-java = "0.23.5"
tree-sitter-utils = { git = "https://github.com/cubewhy/tree-sitter-utils.git" }
tree-sitter-kotlin = { git = "https://github.com/fwcd/tree-sitter-kotlin.git" }
walkdir = "2.5.0"
jimage-rs = "0.0.4"
ropey = "1.6.1"
tempfile = "3.26.0"
async-trait = "0.1.89"

[dev-dependencies]
insta = { version = "1", features = ["ron"] }
