[package]
name = "java-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
dashmap = "6"
rustc-hash = "2"
once_cell = "1"
smallvec = "2.0.0-alpha.12"
parking_lot = "0.12"
arc-swap = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rayon = "1.11.0"
rust-asm = "0.2.0"
zip = "8.4.0"
tower-lsp = "0.20.0"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
dirs = "6.0.0"
nucleo = "0.5.0"
nucleo-matcher = "0.3.1"
indoc = "2.0.7"
salsa = "0.26.0"
tree-sitter = "0.26.7"
tree-sitter-java = "0.23.5"
tree-sitter-utils = { git = "https://github.com/cubewhy/tree-sitter-utils.git" }
tree-sitter-kotlin = { git = "https://github.com/fwcd/tree-sitter-kotlin.git" }
walkdir = "2.5.0"
jimage-rs = "0.0.4"
ropey = "1.6.1"
tempfile = "3.27.0"
async-trait = "0.1.89"
lru = "0.16.3"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
heed = "0.21.0"
rkyv = { version = "0.7.45", features = ["validation"] }

[dev-dependencies]
insta = { version = "1", features = ["ron"] }
criterion = "0.8"

[[bench]]
name = "salsa_performance"
harness = false

[[bench]]
name = "parallel_completion"
harness = false
